# InsightLens

./: .env.example  .env.sample  .gitignore  .replit  DEPLOYMENT.md  Dockerfile.sample  README.md  TESTING_GUIDE.md  app.py  check_env.py  create_test_pdf.py  docker-compose.sample.yml  models.py  pyproject.toml  recreate_db.py  render.yaml  replit.md  replit.nix  requirements.txt  sample_requirements.txt
attached_assets/: Pasted-Below-is-an-InsightLens-style-analysis-of-Zymeworks-10-K-filing-based-on-the-context-you-provided--1743552786542.txt  README.md  📏 InsightLens – PRD.txt  🛠️ InsightLens – Technical Specification.txt
cache/: cache.db  cache.db-shm  cache.db-wal
docs/: DEVLOG.md  InsightLens-Test-Plan.md  New-Features-Guide.md  phase1_completion.md  phase2_completion.md  phase2_completion.txt  phase2_implementation.md  phase2_implementation_plan.md  phase2_test_cases.md
docs/feature implementation/: phase2_completion.md
docs/phase1_screenshots/: edgar_search.html  homepage.html
routes/: __init__.py  admin_routes.py  comparison_routes.py  document_routes.py  edgar_routes.py  export_routes.py  insight_routes.py  share_routes.py
services/: __init__.py  ai_service.py  cache_service.py  demo_service.py  document_comparison.py  document_processor.py  edgar_service.py  industry_templates.py  new_prompt_templates.py  open_source_ai.py  pdf_export.py  pdf_parser.py  url_parser.py
templates/: base.html  comparison.html  comparison_results.html  edgar_search.html  index.html  insights.html
test_scripts/: README.md  test_export.py  test_share.py
(+9 files in other folders)
