[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
    "openai>=1.69.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "routes>=2.5.1",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "langchain-text-splitters>=0.3.7",
    "beautifulsoup4>=4.13.3",
]
