[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "routes>=2.5.1",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "langchain-text-splitters>=0.3.7",
    "beautifulsoup4>=4.13.3",
    "fpdf>=1.7.2",
    "cachetools>=5.5.2",
    "diskcache>=5.6.3",
    "concurrent-log-handler>=0.9.25",
    "tqdm>=4.67.1",
    "reportlab>=4.3.1",
]
